<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fancy="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/tituloMaq"
        android:textSize="20sp"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="1.0"
        android:layout_marginBottom="5dp"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.3"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carrier"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center"
                />
            <com.karumi.expandableselector.ExpandableSelector
                android:id="@+id/es_carrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/expandable_selector_margin"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duracion_burst"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center"
                />
            <com.karumi.expandableselector.ExpandableSelector
                android:id="@+id/es_duartion_burst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/expandable_selector_margin"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.3"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frecuencia_burst"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center"
                />
            <com.karumi.expandableselector.ExpandableSelector
                android:id="@+id/es_freq_burst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/expandable_selector_margin"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="1.0"
        android:layout_marginTop="5dp"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.3"
            android:layout_marginTop="5dp"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rise"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center"
                />
            <com.karumi.expandableselector.ExpandableSelector
                android:id="@+id/es_tAscenso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/expandable_selector_margin"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center"

                />
            <com.karumi.expandableselector.ExpandableSelector
                android:id="@+id/es_tEncendido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/expandable_selector_margin"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.3"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decay"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center"
                />
            <com.karumi.expandableselector.ExpandableSelector
                android:id="@+id/es_tBajada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/expandable_selector_margin"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="1.0"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.3"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/off"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center"
                />
            <com.karumi.expandableselector.ExpandableSelector
                android:id="@+id/es_tReposo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/expandable_selector_margin"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tiempo_aplicacion"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center"
                />
            <com.karumi.expandableselector.ExpandableSelector
                android:id="@+id/es_tAplicacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/expandable_selector_margin"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stim_mode"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center"
                />
            <com.karumi.expandableselector.ExpandableSelector
                android:id="@+id/es_modoEstim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/expandable_selector_margin"
                android:textSize="10sp"
                />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>

    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/footerHeight"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentBottom="true"
        ></LinearLayout>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/fabStart"
        android:layout_width="@dimen/footerHeight"
        android:layout_height="@dimen/footerHeight"
        android:layout_marginBottom="@dimen/footer_fab_margin"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        fancy:fb_defaultColor="@color/colorAccent"
        fancy:fb_focusColor="@color/colorAccentDark"
        fancy:fb_iconResource="@drawable/ic_play_arrow_24dp"
        fancy:fb_iconPaddingLeft="0dp"
        fancy:fb_iconPaddingRight="0dp"
        fancy:fb_radius="64dp"
        fancy:fb_textColor="#FFFFFF" />
</RelativeLayout>