<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    tools:context="com.padron.kinnov.ProgMenu"
    android:background="@color/colorWhite"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prog_menu"
            android:textSize="20sp"
            android:layout_gravity="center"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/item_margin"
            android:id="@+id/item1"
            android:layout_marginBottom="15dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mod_dolor_mec_desc"
                android:id="@+id/tv_titulo1"
                android:textSize="17sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mod_dolor_mec_desc"
                android:id="@+id/tv_desc1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/item_margin"
            android:id="@+id/item2"
            android:layout_marginBottom="15dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mod_dolor_mec_desc"
                android:id="@+id/tv_titulo2"
                android:textSize="17sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mod_dolor_mec_desc"
                android:id="@+id/tv_desc2"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/item_margin"
            android:id="@+id/item3"
            android:layout_marginBottom="15dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mod_dolor_mec_desc"
                android:id="@+id/tv_titulo3"
                android:textSize="17sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mod_dolor_mec_desc"
                android:id="@+id/tv_desc3"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/item_margin"
            android:id="@+id/item4"
            android:layout_marginBottom="15dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mod_dolor_mec_desc"
                android:id="@+id/tv_titulo4"
                android:textSize="17sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mod_dolor_mec_desc"
                android:id="@+id/tv_desc4"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/item_margin"
            android:id="@+id/item5"
            android:layout_marginBottom="15dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mod_dolor_mec_desc"
                android:id="@+id/tv_titulo5"
                android:textSize="17sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mod_dolor_mec_desc"
                android:id="@+id/tv_desc5"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/item_margin"
            android:id="@+id/item6"
            android:layout_marginBottom="15dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mod_dolor_mec_desc"
                android:id="@+id/tv_titulo6"
                android:textSize="17sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mod_dolor_mec_desc"
                android:id="@+id/tv_desc6"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/item_margin"
            android:id="@+id/item7"
            android:layout_marginBottom="15dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mod_dolor_mec_desc"
                android:id="@+id/tv_titulo7"
                android:textSize="17sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mod_dolor_mec_desc"
                android:id="@+id/tv_desc7"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/footerHeight"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentBottom="true"
        android:id="@+id/footerChanels"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/footer_fab_margin"
        />
    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btnSeleccionar"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/footerHeight"
        android:layout_marginBottom="@dimen/footer_fab_margin"
        android:padding="12dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        fancy:fb_defaultColor="@color/colorAccent"
        fancy:fb_focusColor="@color/colorAccentDark"
        fancy:fb_radius="64dp"
        fancy:fb_text="@string/select"
        fancy:fb_textColor="#FFFFFF"
        fancy:fb_textSize="20sp"
        />
</RelativeLayout>
