<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    tools:context="com.padron.kinnov.Channels"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/footerHeight"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentBottom="true"
        android:id="@+id/footerChanels"
        android:orientation="horizontal"
        />

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/fabStop"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/footerHeight"
        android:layout_marginBottom="@dimen/footer_fab_margin"
        android:padding="12dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        fancy:fb_defaultColor="@color/colorAccent"
        fancy:fb_focusColor="@color/colorAccentDark"
        fancy:fb_iconResource="@drawable/stop"
        fancy:fb_iconPosition="right"
        fancy:fb_radius="64dp"
        fancy:fb_text="Detener"
        fancy:fb_textColor="#FFFFFF"
        fancy:fb_textSize="20sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_above="@id/footerChanels"
        android:gravity="center"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="15dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTituloC1"
                    android:textSize="@dimen/titleChanel"
                    android:text="@string/tvCanal1"
                    />
                <mehdi.sakout.fancybuttons.FancyButton
                    android:id="@+id/btn_upCh1"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    fancy:fb_defaultColor="@color/colorTransparent"
                    fancy:fb_borderColor="@color/colorPrimary"
                    fancy:fb_borderWidth="1dp"
                    fancy:fb_focusColor="@color/colorPrimaryDark"
                    fancy:fb_iconResource="@drawable/up_channel"
                    fancy:fb_iconPaddingLeft="0dp"
                    fancy:fb_iconPaddingRight="0dp"
                    fancy:fb_radius="64dp"
                    fancy:fb_textColor="#FFFFFF" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/tvAmp"
                    android:text="0 mAh"
                    android:id="@+id/tvCanal1Value"
                    android:padding="10dp"
                    />
                <mehdi.sakout.fancybuttons.FancyButton
                    android:id="@+id/btn_downCh1"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    fancy:fb_defaultColor="@color/colorTransparent"
                    fancy:fb_borderColor="@color/colorPrimary"
                    fancy:fb_borderWidth="1dp"
                    fancy:fb_focusColor="@color/colorPrimaryDark"
                    fancy:fb_iconResource="@drawable/down_channel"
                    fancy:fb_iconPaddingLeft="0dp"
                    fancy:fb_iconPaddingRight="0dp"
                    fancy:fb_radius="64dp"
                    fancy:fb_textColor="#FFFFFF" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="15dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTituloC2"
                    android:textSize="@dimen/titleChanel"
                    android:text="@string/tvCanal2"
                    />
                <mehdi.sakout.fancybuttons.FancyButton
                    android:id="@+id/btn_upCh2"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    fancy:fb_defaultColor="@color/colorTransparent"
                    fancy:fb_borderColor="@color/colorPrimary"
                    fancy:fb_borderWidth="1dp"
                    fancy:fb_focusColor="@color/colorPrimaryDark"
                    fancy:fb_iconResource="@drawable/up_channel"
                    fancy:fb_iconPaddingLeft="0dp"
                    fancy:fb_iconPaddingRight="0dp"
                    fancy:fb_radius="64dp"
                    fancy:fb_textColor="#FFFFFF" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/tvAmp"
                    android:text="0 mAh"
                    android:id="@+id/tvCanal2Value"
                    android:padding="10dp"
                    />
                <mehdi.sakout.fancybuttons.FancyButton
                    android:id="@+id/btn_downCh2"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    fancy:fb_defaultColor="@color/colorTransparent"
                    fancy:fb_borderColor="@color/colorPrimary"
                    fancy:fb_borderWidth="1dp"
                    fancy:fb_focusColor="@color/colorPrimaryDark"
                    fancy:fb_iconResource="@drawable/down_channel"
                    fancy:fb_iconPaddingLeft="0dp"
                    fancy:fb_iconPaddingRight="0dp"
                    fancy:fb_radius="64dp"
                    fancy:fb_textColor="#FFFFFF" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="15dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTituloC3"
                    android:textSize="@dimen/titleChanel"
                    android:text="@string/tvCanal3"
                    />
                <mehdi.sakout.fancybuttons.FancyButton
                    android:id="@+id/btn_upCh3"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    fancy:fb_defaultColor="@color/colorTransparent"
                    fancy:fb_borderColor="@color/colorPrimary"
                    fancy:fb_borderWidth="1dp"
                    fancy:fb_focusColor="@color/colorPrimaryDark"
                    fancy:fb_iconResource="@drawable/up_channel"
                    fancy:fb_iconPaddingLeft="0dp"
                    fancy:fb_iconPaddingRight="0dp"
                    fancy:fb_radius="64dp"
                    fancy:fb_textColor="#FFFFFF" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/tvAmp"
                    android:text="0 mAh"
                    android:id="@+id/tvCanal3Value"
                    android:padding="10dp"
                    />
                <mehdi.sakout.fancybuttons.FancyButton
                    android:id="@+id/btn_downCh3"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    fancy:fb_defaultColor="@color/colorTransparent"
                    fancy:fb_borderColor="@color/colorPrimary"
                    fancy:fb_borderWidth="1dp"
                    fancy:fb_focusColor="@color/colorPrimaryDark"
                    fancy:fb_iconResource="@drawable/down_channel"
                    fancy:fb_iconPaddingLeft="0dp"
                    fancy:fb_iconPaddingRight="0dp"
                    fancy:fb_radius="64dp"
                    fancy:fb_textColor="#FFFFFF" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="15dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTituloC4"
                    android:textSize="@dimen/titleChanel"
                    android:text="@string/tvCanal4"
                    />
                <mehdi.sakout.fancybuttons.FancyButton
                    android:id="@+id/btn_upCh4"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    fancy:fb_defaultColor="@color/colorTransparent"
                    fancy:fb_borderColor="@color/colorPrimary"
                    fancy:fb_borderWidth="1dp"
                    fancy:fb_focusColor="@color/colorPrimaryDark"
                    fancy:fb_iconResource="@drawable/up_channel"
                    fancy:fb_iconPaddingLeft="0dp"
                    fancy:fb_iconPaddingRight="0dp"
                    fancy:fb_radius="64dp"
                    fancy:fb_textColor="#FFFFFF" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/tvAmp"
                    android:text="0 mAh"
                    android:id="@+id/tvCanal4Value"
                    android:padding="10dp"
                    />
                <mehdi.sakout.fancybuttons.FancyButton
                    android:id="@+id/btn_downCh4"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    fancy:fb_defaultColor="@color/colorTransparent"
                    fancy:fb_borderColor="@color/colorPrimary"
                    fancy:fb_borderWidth="1dp"
                    fancy:fb_focusColor="@color/colorPrimaryDark"
                    fancy:fb_iconResource="@drawable/down_channel"
                    fancy:fb_iconPaddingLeft="0dp"
                    fancy:fb_iconPaddingRight="0dp"
                    fancy:fb_radius="64dp"
                    fancy:fb_textColor="#FFFFFF" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
